<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">


        <item
            android:checkable="false"
            android:id="@+id/nav_online"
            android:icon="@drawable/icon_global"
            android:title="@string/onlinemusic" />

        <item
            android:checkable="false"
            android:id="@+id/nav_playlist"
            android:icon="@drawable/icon_star"
            android:title="@string/myplaylist" />

        <item
            android:checkable="false"
            android:id="@+id/nav_playlist_singer"
            android:icon="@drawable/icon_singer"
            android:title="@string/listbySinger" />

        <item
            android:checkable="false"
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history">
        </item>

        <item
            android:checkable="false"
            android:id="@+id/nav_scan"
            android:icon="@drawable/icon_magnifier"
            android:title="@string/scan">
        </item>

        <item
            android:id="@+id/nav_setting"
            android:checkable="false"
            android:icon="@drawable/ic_info"
            android:title="@string/Setting"></item>


    </group>
</menu>