<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingFragment">


    <Button
        android:id="@+id/st_about"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/about" />

    <Button
        android:id="@+id/st_pp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/st_about"
        android:layout_centerInParent="true"
        android:text="@string/pp"
        android:textColorLink="#396975" />

    <Button
        android:id="@+id/st_lang"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/st_pp"
        android:layout_centerInParent="true"
        android:text="@string/changeLang"
        android:textColorLink="#396975" />
</RelativeLayout>